# qb-llvm

./: CMakeLists.txt  Makefile  README.org  build.py  test.qb
.github/workflows/: build.yml
editor/: qb-mode.el
src/: qb.cpp  qb_lexer.cpp  qb_lexer.hpp
